# embedded-labs

./: .gitignore  Cargo.toml  README.md  laze-project.yml
src/: main.rs
